@@ -1,3 +1,14 @@
+2009-12-01  Adam Barth  <abarth@webkit.org>
+
+        Reviewed by Darin Adler.
+
+        https://bugs.webkit.org/show_bug.cgi?id=21288
+
+        Add sneaky test that has tabs.
+
+        * fast/frames/sandboxed-iframe-attribute-parsing-expected.txt: Added.
+        * fast/frames/sandboxed-iframe-attribute-parsing.html: Added.
+
 2009-12-01  Patrik Persson  <patrik.j.persson@ericsson.com>
 
         Reviewed by Darin Adler.
